buildDeploy/deployment/10_pass_jazzy_all.yml
---
--- # Network Policy
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: jazzy-network-policy
  namespace: red
spec:
  podSelector:
    matchLabels:
      app: red-jazzy
  ingress: 
  - from: 
    - podSelector:
        matchLabels:
          app: red-jazzy
---
--- # Service defs
---
apiVersion: v1
kind: Service
metadata:
  name: red-jazzy-podb
  namespace: red
  labels:
    app: red-jazzy
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: red-jazzy-podb
  selector:
    app: red-jazzy-podb

--- #
--- # Course :: Problem Diagnosis and Troubleshooting Lab 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-jazzy-poda
  namespace: red
  labels:
    app: red-jazzy
    role: ask
spec:
  selector:
    matchLabels:
      app: red-jazzy-poda
  replicas: 1
  template:
    metadata:
      labels:
        app: red-jazzy-poda
        role: ask
    spec:
      containers:
      - name: red-jazzy-poda
        image: ibmicpcoc/jazzy:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-jazzy-podb
  namespace: red
  labels:
    app: red-jazzy-podb
    role: ask
spec:
  selector:
    matchLabels:
      app: red-jazzy-podb
  replicas: 1
  template:
    metadata:
      labels:
        app: red-jazzy-podb
    spec:
      containers:
      - name: red-jazzy-podb
        image: ibmicpcoc/jazzy:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
